--- a/CarRental/Views/Login/Index.cshtml
+++ b/CarRental/Views/Login/Index.cshtml
@@ -28,7 +28,7 @@
                         <h2 class="title-4 mb-2">Login</h2>
                         <p class="desc-content">Please login using account detail bellow.</p>
                     </div>
-                    <form asp-controller="Login" asp-action="Index">
+                    <form asp-controller="Login" asp-action="Index" asp-route-returnurl="@ViewBag.ReturnUrl">
                         <div class="single-input-item mb-3">
                             <input type="email" asp-for="Email" placeholder="Email or Username">
                         </div>
