--- a/CarRental/Views/Accounts/Index.cshtml
+++ b/CarRental/Views/Accounts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using CarRental.Utilities
+﻿@model CarRental.Models.Customer
+@using CarRental.Utilities
 <!-- Breadcrumb Area Start Here -->
 <div class="breadcrumbs-area position-relative">
     <div class="container">
@@ -141,16 +142,15 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="address-edit" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Billing Address</h3>
+                                        <h3>Địa chỉ</h3>
                                         <address>
-                                            <p><strong>Alex Aya</strong></p>
+                                            <p><strong>@Model.Name</strong></p>
                                             <p>
-                                                1234 Market ##, Suite 900 <br>
-                                                Lorem Ipsum, ## 12345
+                                                Địa chỉ: @Model.Address
                                             </p>
-                                            <p>Mobile: (123) 123-456789</p>
+                                            <p>Điện thoại: @Model.PhoneNumber</p>
                                         </address>
-                                        <a href="#" class="btn flosun-button secondary-btn theme-color  rounded-0"><i class="fa fa-edit mr-2"></i>Edit Address</a>
+                                        <a asp-controller="Accounts" asp-action="editAdress"  class="btn flosun-button secondary-btn theme-color  rounded-0"><i class="fa fa-edit mr-2"></i>Edit Address</a>
                                     </div>
                                 </div>
                                 <!-- Single Tab Content End -->
