--- a/CarRental/Views/Accounts/Index.cshtml
+++ b/CarRental/Views/Accounts/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model CarRental.Models.Customer
 @using CarRental.Utilities
+@{
+    List<CarRentalOrder> carRentalOrders = ViewBag.Order;
+}
 <!-- Breadcrumb Area Start Here -->
 <div class="breadcrumbs-area position-relative">
     <div class="container">
@@ -32,7 +35,7 @@
                                     <i class="fa fa-dashboard"></i>
                                     Dashboard
                                 </a>
-                                <a href="#orders" data-bs-toggle="tab"><i class="fa fa-cart-arrow-down"></i> Orders</a>
+                                <a href="#orders" data-bs-toggle="tab"><i class="fa fa-cart-arrow-down"></i> Đơn hàng</a>
                                 <a href="#download" data-bs-toggle="tab"><i class="fa fa-cloud-download"></i> Download</a>
                                 <a href="#payment-method" data-bs-toggle="tab"><i class="fa fa-credit-card"></i> Payment Method</a>
                                 <a href="#address-edit" data-bs-toggle="tab"><i class="fa fa-map-marker"></i> address</a>
@@ -58,40 +61,36 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="orders" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Orders</h3>
+                                        <h3>Đơn hàng của bạn</h3>
                                         <div class="myaccount-table table-responsive text-center">
                                             <table class="table table-bordered">
                                                 <thead class="thead-light">
                                                     <tr>
-                                                        <th>Order</th>
-                                                        <th>Date</th>
-                                                        <th>Status</th>
-                                                        <th>Total</th>
-                                                        <th>Action</th>
+                                                        <th>Mã đơn hàng</th>
+                                                        <th>Ngày đặt</th>
+                                                        <th>Ngày trả</th>
+                                                        <th>Trạng thái</th>
+                                                        <th>Tổng</th>
+                                                        <th>Chi tiết</th>
+                                                        <th>Huỷ đơn</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
-                                                        <td>1</td>
-                                                        <td>Aug 22, 2022</td>
-                                                        <td>Pending</td>
-                                                        <td>$3000</td>
-                                                        <td><a href="cart.html" class="btn flosun-button secondary-btn theme-color  rounded-0">View</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>2</td>
-                                                        <td>July 22, 2022</td>
-                                                        <td>Approved</td>
-                                                        <td>$200</td>
-                                                        <td><a href="cart.html" class="btn flosun-button secondary-btn theme-color  rounded-0">View</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>3</td>
-                                                        <td>June 12, 2022</td>
-                                                        <td>On Hold</td>
-                                                        <td>$990</td>
-                                                        <td><a href="cart.html" class="btn flosun-button secondary-btn theme-color  rounded-0">View</a></td>
-                                                    </tr>
+                                                    @foreach(var item in carRentalOrders) {
+                                                        <tr>
+                                                            <td>@item.OrderId</td>
+                                                            <td>@item.OrderDate</td>
+                                                            <td>@item.ReturnDate</td>
+                                                            <td>@item.Status.StatusDescription</td>
+                                                            <td>@item.Payment</td>
+                                                            <td><a asp-controller="Accounts" asp-action="OrderDetails" asp-route-id="@item.OrderId" class="btn flosun-button secondary-btn theme-color  rounded-0">Xem chi tiết</a></td>
+                                                            <td><a class="btn flosun-button secondary-btn theme-color  rounded-0"><i class="bi bi-trash3-fill"></i></a></td>
+
+                                                        </tr>
+
+                                                    }
+                                                    
+                                                    
                                                 </tbody>
                                             </table>
                                         </div>
