--- a/CarRental/Views/Accounts/OrderDetails.cshtml
+++ b/CarRental/Views/Accounts/OrderDetails.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<CarRental.ViewModels.OrderDetailVM>
+@using CarRental.Utilities;
 @{
     ViewData["Title"] = "OrderDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,10 +11,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Shopping Cart</h3>
+                    <h3 class="title-3" style="color:white">Chi tiết đơn hàng</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li>Shopping Cart</li>
+                        <li><a href="index.html" style="color:white">Home</a></li>
+                        <li style="color:white">Chi tiết đơn hàng</li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +63,33 @@
                
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-lg-5 ml-auto col-custom">
+                <!-- Cart Calculation Area -->
+                <div class="cart-calculator-wrapper">
+                    <div class="cart-calculate-items">
+                        <h3>Địa chỉ nhận hàng</h3>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <tr>
+                                    <td>Tên người nhận</td>
+                                    <td>@Function._UserName</td>
+                                </tr>
+                                <tr>
+                                    <td>Số điện thoại</td>
+                                    <td>@Function._Phone</td>
+                                </tr>
+                                <tr class="total">
+                                    <td>Địa chỉ</td>
+                                    <td class="total-amount">@Function._address</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <a href="checkout.html" class="btn flosun-button primary-btn rounded-0 black-btn w-100">Trả lại đơn hàng</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- cart main wrapper end -->
