--- a/CarRental/wwwroot/assets/css/style.css
+++ b/CarRental/wwwroot/assets/css/style.css
@@ -64,7 +64,7 @@ h4,
 h5,
 h6 {
   font-family: "Poppins", sans-serif;
-  color: #000000;
+  color: #ffffff;
   font-weight: 500;
   margin-top: 0px;
   font-weight: 400;
