--- a/CarRental/Areas/Admin/Views/Account/Edit.cshtml
+++ b/CarRental/Areas/Admin/Views/Account/Edit.cshtml
@@ -39,7 +39,7 @@
                                 </div>
                                 <div class="card-content">
                                     <div class="card-body">
-                                        <form class="form form-horizontal" asp-action="Edit" method="post">
+                                        <form class="form form-horizontal" asp-controller="Account" asp-action="Edit" method="post">
                                             <div class="form-body">
                                                 <div class="row">
                                                     <div class="col-md-4">
@@ -109,7 +109,7 @@
                                                     </div>
                                                     <div class="col-12 d-flex justify-content-end">
                                                         <button 
-                                                            class="btn btn-primary me-1 mb-1">Submit</button>
+                                                            class="btn btn-primary me-1 mb-1" type="submit">Submit</button>
                                                         <button type="reset"
                                                             class="btn btn-light-secondary me-1 mb-1">Reset</button>
                                                     </div>
