--- a/CarRental/Views/Accounts/Index.cshtml
+++ b/CarRental/Views/Accounts/Index.cshtml
@@ -158,7 +158,7 @@
                                     <div class="myaccount-content">
                                         <h3>Chi tiết tài khoản</h3>
                                         <div class="account-details-form">
-                                            <form asp-controller="Accounts" asp-action="AccountDetails">
+                                            <form asp-controller="Accounts" asp-action="AccountDetails" enctype="multipart/form-data">
                                                <input type="hidden" asp-for="CustomerId"/>
                                                 <div class="single-input-item mb-3">
                                                     <label for="display-name" class="required mb-1">Tên hiển thị</label>
@@ -170,10 +170,7 @@
                                                 </div>
                                                 <fieldset>
                                                     <legend>Thay đổi Mật khẩu</legend>
-                                                    @* <div class="single-input-item mb-3">
-                                                        <label for="current-pwd" class="required mb-1">Current Password</label>
-                                                        <input type="password" id="current-pwd" placeholder="Current Password" />
-                                                    </div> *@
+                                                    
                                                     <div class="row">
                                                         <div class="col-lg-6 col-custom">
                                                             <div class="single-input-item mb-3">
@@ -189,6 +186,19 @@
                                                         </div>
                                                     </div>
                                                 </fieldset>
+
+                                                <fieldset>
+                                                    <legend>Cập nhật Ảnh</legend>
+                                                    <div class="single-input-item mb-3">
+                                                        <label for="img" class="required mb-1">Ảnh đại diện</label>
+                                                        <input type="file" name="img" />
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <img src="~/files/Customer/@Model.Avartar" alt="Ảnh đại diện" style="max-width: 500px; max-height: 500px;" />
+                                                    </div>
+                                                </fieldset>
+
+                                               
                                                 <div class="single-input-item single-item-button">
                                                     <button type="submit" class="btn flosun-button secondary-btn theme-color  rounded-0">Save Changes</button>
                                                 </div>
